Fix in gap between section and search box in demo.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -356,7 +356,7 @@ textarea.code_snippet {
   margin-top: 3rem;
 }
 .dashboard-body .search-box{
-  margin-top: 3.5rem;
+  margin-top: 4rem;
 }
 .search-box .fa-search{
   position: absolute;
